--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
    <link rel="stylesheet" href= "path/to/font-awesome/css/font-awesome.min.css">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hindi&display=swap">
-   <link rel="stylesheet" href="./index.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
