--- a/index.html
+++ b/index.html
@@ -5,28 +5,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo App</title>
-    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-   <link rel="stylesheet" href= "path/to/font-awesome/css/font-awesome.min.css">
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hindi&display=swap">
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"/>
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        h1 {
+            text-align: center;
+            font-weight: 600;
+            font-size: 2.5rem;
+            color: #333;
+            margin-bottom: 20px;
+        }
+        .styling {
+            color: #007bff;
+        }
+        .input_div {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .input {
+            width: 300px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+        .input:focus {
+            outline: none;
+            border-color: #007bff;
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+        }
+        .addButton {
+            background-color: #007bff;
+            border: none;
+            padding: 10px 15px;
+            color: #fff;
+            font-size: 1.2rem;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-left: 10px;
+            transition: background-color 0.3s ease;
+        }
+        .addButton:hover {
+            background-color: #0056b3;
+        }
+        .container {
+            width: 100%;
+            max-width: 500px;
+            margin: 0 auto;
+        }
+        .item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #fff;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .item_input {
+            border: none;
+            font-size: 1rem;
+            flex-grow: 1;
+            margin-right: 10px;
+            background-color: transparent;
+            outline: none;
+        }
+        .editButton, .removeButton {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            font-size: 1.2rem;
+            color: #007bff;
+            margin-left: 10px;
+            transition: color 0.3s ease;
+        }
+        .editButton:hover, .removeButton:hover {
+            color: #0056b3;
+        }
+        @media (max-width: 768px) {
+            .input_div {
+                flex-direction: column;
+                align-items: stretch;
+            }
+            .input, .addButton {
+                width: 100%;
+                margin-left: 0;
+                margin-bottom: 10px;
+            }
+        }
+    </style>
 </head>
 <body>
-    
-    <h1><span class="styling">TODO</span>LIST</h1>
-    <div class="input_div">
-        <input type="text" class="input" placeholder="What do You Want To do ....">
-        <button class="addButton"><i class="fas fa-plus"></i></button>
+    <div class="main-container text-center">
+        <h1><span class="styling">TODO</span> LIST</h1>
+        <div class="input_div">
+            <input type="text" class="input" placeholder="What do you want to do...">
+            <button class="addButton"><i class="fas fa-plus"></i></button>
+        </div>
+        <div class="container">
+            <!-- Tasks will be dynamically added here -->
+        </div>
     </div>
-     <div class="container">
-        <!-- <div class="item">
-            <input type="text" class="item_input" value="disabled">
-            <button class="editButton">Edit</button>
-            <button class="removeButton">Remove</button>
-        </div> -->
-    </div>
-
-
-
 
     <script type="text/javascript" src="index.js"></script>
 </body>
